compiler/testData/asJava/lightClasses/compilationErrors/TraitClassObjectField.java
public interface TraitClassObjectField {
    private TraitClassObjectField.Companion Companion;

    static final class Companion {
        public final java.lang.String x;
        private final java.lang.String y;
        private final TraitClassObjectField.Companion Companion;

        private Companion() { /* compiled code */ }

        private final java.lang.String getY() { /* compiled code */ }
    }
}